--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "client",
+  "name": "statify",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://nanonerd99.github.io/statify/",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d dist"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -30,6 +33,7 @@
     "@vitejs/plugin-react": "^3.1.0",
     "eslint": "^8.35.0",
     "eslint-config-react-app": "^7.0.1",
+    "gh-pages": "^6.1.1",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
